--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">iTunes Movies</string>
+    <string name="app_name">Itunes Movie App</string>
+    <string name="itunes_movies">iTunes Movies</string>
+    <string name="search">Search</string>
 </resources>
